Archive/ffa8b4e32be0676e0b2f45eff43d1cee-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘unsigned int AtomicBuffer::read(void*, unsigned int)’:
main.cpp:38:27: error: ‘allowed’ was not declared in this scope
         memcpy(buf, data, allowed);
                           ^
main.cpp:30:18: warning: unused variable ‘read_available’ [-Wunused-variable]
         unsigned read_available = num_written - num_read;
                  ^
main.cpp:31:18: warning: unused variable ‘offset’ [-Wunused-variable]
         unsigned offset = num_written % mData.size();
                  ^
main.cpp: In member function ‘unsigned int AtomicBuffer::write(const void*, unsigned int)’:
main.cpp:53:21: error: lvalue required as left operand of assignment
         mNumWritten = num_written + allowed;
                     ^
main.cpp: In member function ‘unsigned int AtomicBuffer::read(void*, unsigned int)’:
main.cpp:41:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
